# AiGymBuddy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/agents/: coach-simulator.md  prompt-tester.md  reviewer.md
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.converge.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/skills/calorie-estimation/: SKILL.md
.claude/skills/db-schema/: SKILL.md
.specify/: feature.json
.specify/memory/: constitution.md
app/: config.py  main.py
app/db/: migrate.py  pool.py  queries.py  vision_comparison_queries.py
app/prompts/: calorie_vision.md  timezone_extraction.md
app/services/: daily_total.py  meal_logging.py  timezone.py  vision.py  vision_comparison.py  vision_models.py
app/whatsapp/: media.py  send.py  webhook.py
scripts/: compare_vision_models.py
specs/001-photo-calorie-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-daily-total-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vision-model-comparison/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chat-responsiveness/: spec.md
tests/: fakes.py  test_calorie_accuracy.py
tests/contract/: test_webhook_image.py
tests/integration/: test_meal_grouping.py  test_vision_comparison_flow.py
tests/unit/: test_daily_total.py  test_meal_logging.py  test_media.py  test_timezone.py  test_vision_comparison.py
(+21 files in other folders)
